# PCSC

./: configure.ac
doc/: Makefile.am
src/: Makefile.am  eventhandler.c  pcscdaemon.c  readerfactory.c  readerfactory.h  winscard_svc.c
